Fix: navigation z-index + Feature: auto-adjusted min-max chart values

--- a/src/main/resources/static/css/pageStyle.css
+++ b/src/main/resources/static/css/pageStyle.css
@@ -23,6 +23,7 @@ h4 {
 
 .navigation {
     position: sticky;
+    z-index: 1000;
     top: 0;
 }
 
